infra/cloudformation/templates/stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Setup Kubernetes cluster infrastructure to deploy tioxy/scheduler
Parameters:
  VPCCIDR:
    Description: CIDR block
    Type: String
    Default: 10.56.0.0/16
  PublicSubnetCIDR:
    Description: Public Subnet CIDR block
    Type: String
    Default: 10.56.0.0/24
    ConstraintDescription: Must match VPC range
  PrivateSubnetCIDR:
    Description: Private Subnet CIDR block
    Type: String
    Default: 10.56.1.0/24
    ConstraintDescription: Must match VPC range
  MasterInstanceSize:
    Description: Kubernetes Master instance size
    Type: String
    Default: t3.medium
  KeyPairName:
    Description: EC2 Key Pair name used to create instances
    Type: AWS::EC2::KeyPair::KeyName
    Default: se-devops-test
  InstanceAMI:
    Description: Kubernetes Base AMI generated by Packer
    Type: AWS::EC2::Image::Id

Resources:
  #
  # EC2 IAM Role for Kubernetes Nodes
  #
  BaseInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: kubernetes-node
      Roles:
        - !Ref KubernetesNodeRole
  KubernetesNodeRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: kubernetes-node
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  #
  # cluster-autoscaler IAM Policy to provision new instances when Pods can't be scheduled 
  # (https://github.com/kubernetes/autoscaler/tree/master/cluster-autoscaler/cloudprovider/aws#attach-iam-policy-to-nodegroup)
  #
  ClusterAutoscalerPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: kubernetes-cluster-autoscaler
      Roles:
        - !Ref KubernetesNodeRole
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - "autoscaling:DescribeAutoScalingGroups"
              - "autoscaling:DescribeAutoScalingInstances"
              - "autoscaling:DescribeTags"
              - "autoscaling:SetDesiredCapacity"
              - "autoscaling:TerminateInstanceInAutoScalingGroup"
            Resource: "*"
  #
  # VPC
  #
  KubernetesVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: VPC
          Value: kubernetes-vpc
        - Key: Name
          Value: kubernetes-vpc

  #
  # IGW (Internet Gateway)
  #
  KubernetesInternetGateway:
    Type: AWS::EC2::InternetGateway
  KubernetesAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref KubernetesVPC
      InternetGatewayId: !Ref KubernetesInternetGateway

  #
  # One pair of Subnets (public/private)
  #
  KubernetesPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KubernetesVPC
      CidrBlock: !Ref PublicSubnetCIDR
      AvailabilityZone: !Sub ${AWS::Region}a
      Tags:
        - Key: Name
          Value: !Sub kubernetes-vpc.public-${AWS::Region}a
  KubernetesPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KubernetesVPC
      CidrBlock: !Ref PrivateSubnetCIDR
      AvailabilityZone: !Sub ${AWS::Region}a
      Tags:
        - Key: Name
          Value: !Sub kubernetes-vpc.private-${AWS::Region}a

  #
  # NAT Gateway
  #
  KubernetesNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
       AllocationId: !GetAtt KubernetesNATGatewayEIP.AllocationId
       SubnetId: !Ref KubernetesPublicSubnet
       Tags:
          - Key: Name
            Value: !Sub kubernetes-vpc.nat-${AWS::Region}a
  KubernetesNATGatewayEIP:
   DependsOn: KubernetesAttachGateway
   Type: AWS::EC2::EIP
   Properties:
      Domain: vpc

  #
  # Route Tables
  #
  KubernetesPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KubernetesVPC
      Tags:
      - Key: Name
        Value: kubernetes-vpc.public
  KubernetesPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KubernetesVPC
      Tags:
      - Key: Name
        Value: kubernetes-vpc.private

  KubernetesPublicRouteTableRouteIGW:
    Type: AWS::EC2::Route
    Properties:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref KubernetesInternetGateway
       RouteTableId: !Ref KubernetesPublicRouteTable
  KubernetesPrivateRouteTableRouteNAT:
    Type: AWS::EC2::Route
    Properties:
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref KubernetesNATGateway
       RouteTableId: !Ref KubernetesPrivateRouteTable


  KubernetesPublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KubernetesPublicSubnet
      RouteTableId: !Ref KubernetesPublicRouteTable
  KubernetesPrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref KubernetesPrivateSubnet
      RouteTableId: !Ref KubernetesPrivateRouteTable

  #
  # EC2
  #
  KubernetesSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: kubernetes-node
      GroupDescription: Kubernetes required rules to communicate nodes
      VpcId: !Ref KubernetesVPC
      SecurityGroupEgress:
      - Description: Anywhere
        CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
        FromPort: 0
        ToPort: 65535 
      SecurityGroupIngress:
      - Description: VPC All Traffic
        CidrIp: !Ref VPCCIDR
        IpProtocol: "-1"
        FromPort: 0
        ToPort: 65535 
      Tags:
      - Key: Name
        Value: kubernetes-node

  KubernetesMaster:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      CreditSpecification:
        CPUCredits: standard
      IamInstanceProfile: !Ref BaseInstanceProfile
      ImageId: !Ref InstanceAMI
      InstanceType: !Ref MasterInstanceSize
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
      - !GetAtt KubernetesSecurityGroup.GroupId
      SubnetId: !Ref KubernetesPublicSubnet
      Tags:
      - Key: Name
        Value: kubernetes-master
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            sleep 2m
            sudo kubeadm config images pull
            sudo kubeadm init --pod-network-cidr=192.168.0.0/16
            sudo mkdir -p /home/admin/.kube/
            sudo cp -i /etc/kubernetes/admin.conf /home/admin/.kube/config
            sudo chown -R admin:admin /home/admin/.kube/
            KUBECONFIG=/etc/kubernetes/admin.conf kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml
            KUBECONFIG=/etc/kubernetes/admin.conf kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml
